Project Section Improvements

--- a/index.html
+++ b/index.html
@@ -561,12 +561,8 @@ justify-center gap-4">
                             <img src="Images/anger_translator.jpg" alt="Pocket Comedian" class="w-full h-full object-cover">
                             <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/95 via-black/60 to-transparent p-5 pt-16">
                                 <h3 class="text-white font-bold text-base mb-3" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">Pocket Comedian: BosonAI Hackathon Winner</h3>
-                                <button onclick="flipCard(this)" class="btn-view-details bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gradient-to-r hover:from-[#ff4e50] hover:to-[#ff867a] hover:text-white transition-all duration-300 shadow-lg flex items-center">
-                                    View Details
-                                    <span class="btn-icon-container">
-                                        <img src="Images/arrow-icon.png" alt="Arrow" class="btn-icon-default">
-                                        <img src="Images/arrow-icon-dark.png" alt="Arrow Hover" class="btn-icon-hover">
-                                    </span>
+                                <button onclick="flipCard(this)" class="bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gradient-to-r hover:from-[#ff4e50] hover:to-[#ff867a] hover:text-white transition-all duration-300 shadow-lg">
+                                    View Details →
                                 </button>
                             </div>
                         </div>
@@ -594,12 +590,8 @@ justify-center gap-4">
                             <img src="Images/project-1.jpg" alt="Ink-to-Tint" class="w-full h-full object-cover">
                             <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/95 via-black/60 to-transparent p-5 pt-16">
                                 <h3 class="text-white font-bold text-base mb-3" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">Ink-to-Tint: Manga Artisan</h3>
-                                <button onclick="flipCard(this)" class="btn-view-details bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gradient-to-r hover:from-[#ff4e50] hover:to-[#ff867a] hover:text-white transition-all duration-300 shadow-lg flex items-center">
-                                    View Details
-                                    <span class="btn-icon-container">
-                                        <img src="Images/arrow-icon.png" alt="Arrow" class="btn-icon-default">
-                                        <img src="Images/arrow-icon-dark.png" alt="Arrow Hover" class="btn-icon-hover">
-                                    </span>
+                                <button onclick="flipCard(this)" class="bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gradient-to-r hover:from-[#ff4e50] hover:to-[#ff867a] hover:text-white transition-all duration-300 shadow-lg">
+                                    View Details →
                                 </button>
                             </div>
                         </div>
@@ -630,12 +622,8 @@ justify-center gap-4">
                             <img src="Images/pikachu_pic.jpg" alt="LLM Modeling" class="w-full h-full object-cover">
                             <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/95 via-black/60 to-transparent p-5 pt-16">
                                 <h3 class="text-white font-bold text-base mb-3" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">Optimized LLM Modeling</h3>
-                                <button onclick="flipCard(this)" class="btn-view-details bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gradient-to-r hover:from-[#ff4e50] hover:to-[#ff867a] hover:text-white transition-all duration-300 shadow-lg flex items-center">
-                                    View Details
-                                    <span class="btn-icon-container">
-                                        <img src="Images/arrow-icon.png" alt="Arrow" class="btn-icon-default">
-                                        <img src="Images/arrow-icon-dark.png" alt="Arrow Hover" class="btn-icon-hover">
-                                    </span>
+                                <button onclick="flipCard(this)" class="bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gradient-to-r hover:from-[#ff4e50] hover:to-[#ff867a] hover:text-white transition-all duration-300 shadow-lg">
+                                    View Details →
                                 </button>
                             </div>
                         </div>
@@ -663,12 +651,8 @@ justify-center gap-4">
                             <img src="Images/project-2.png" alt="3D Gaussian Splatting" class="w-full h-full object-cover">
                             <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/95 via-black/60 to-transparent p-5 pt-16">
                                 <h3 class="text-white font-bold text-base mb-3" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">3D Gaussian Splatting</h3>
-                                <button onclick="flipCard(this)" class="btn-view-details bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gradient-to-r hover:from-[#ff4e50] hover:to-[#ff867a] hover:text-white transition-all duration-300 shadow-lg flex items-center">
-                                    View Details
-                                    <span class="btn-icon-container">
-                                        <img src="Images/arrow-icon.png" alt="Arrow" class="btn-icon-default">
-                                        <img src="Images/arrow-icon-dark.png" alt="Arrow Hover" class="btn-icon-hover">
-                                    </span>
+                                <button onclick="flipCard(this)" class="bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gradient-to-r hover:from-[#ff4e50] hover:to-[#ff867a] hover:text-white transition-all duration-300 shadow-lg">
+                                    View Details →
                                 </button>
                             </div>
                         </div>
@@ -699,12 +683,8 @@ justify-center gap-4">
                             <img src="Images/project-3.png" alt="Badminton Analysis" class="w-full h-full object-cover">
                             <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/95 via-black/60 to-transparent p-5 pt-16">
                                 <h3 class="text-white font-bold text-base mb-3" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">Badminton Player Analysis</h3>
-                                <button onclick="flipCard(this)" class="btn-view-details bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gradient-to-r hover:from-[#ff4e50] hover:to-[#ff867a] hover:text-white transition-all duration-300 shadow-lg flex items-center">
-                                    View Details
-                                    <span class="btn-icon-container">
-                                        <img src="Images/arrow-icon.png" alt="Arrow" class="btn-icon-default">
-                                        <img src="Images/arrow-icon-dark.png" alt="Arrow Hover" class="btn-icon-hover">
-                                    </span>
+                                <button onclick="flipCard(this)" class="bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gradient-to-r hover:from-[#ff4e50] hover:to-[#ff867a] hover:text-white transition-all duration-300 shadow-lg">
+                                    View Details →
                                 </button>
                             </div>
                         </div>
@@ -735,12 +715,8 @@ justify-center gap-4">
                             <img src="Images/project-4.jpg" alt="Polynomial Equation Solver" class="w-full h-full object-cover">
                             <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/95 via-black/60 to-transparent p-5 pt-16">
                                 <h3 class="text-white font-bold text-base mb-3" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">Handwritten Polynomial Solver</h3>
-                                <button onclick="flipCard(this)" class="btn-view-details bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gradient-to-r hover:from-[#ff4e50] hover:to-[#ff867a] hover:text-white transition-all duration-300 shadow-lg flex items-center">
-                                    View Details
-                                    <span class="btn-icon-container">
-                                        <img src="Images/arrow-icon.png" alt="Arrow" class="btn-icon-default">
-                                        <img src="Images/arrow-icon-dark.png" alt="Arrow Hover" class="btn-icon-hover">
-                                    </span>
+                                <button onclick="flipCard(this)" class="bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gradient-to-r hover:from-[#ff4e50] hover:to-[#ff867a] hover:text-white transition-all duration-300 shadow-lg">
+                                    View Details →
                                 </button>
                             </div>
                         </div>
