Project Section Improvements

--- a/index.html
+++ b/index.html
@@ -1408,7 +1408,7 @@ justify-center gap-4">
     </div>
 
     <!-- Link JS file with HTML -->
-    <script src="./script.js"></script>
+    <script src="./script.js?v=2"></script>
 </body>
 
 </html>
