--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ justify-center gap-4">
             <div class="grid grid-cols-3 gap-6">
                 
                 <!-- Flip Card 1: Pocket Comedian -->
-                <div class="flip-card h-[320px] fade-in-up" style="perspective: 1000px;">
+                <div class="flip-card fade-in-up h-[320px]" style="perspective: 1000px;">
                     <div class="flip-card-inner relative w-full h-full transition-transform duration-700" style="transform-style: preserve-3d;">
                         <!-- Front -->
                         <div class="flip-card-front absolute w-full h-full rounded-xl shadow-xl overflow-hidden" style="backface-visibility: hidden;">
@@ -578,7 +578,7 @@ justify-center gap-4">
                 </div>
 
                 <!-- Flip Card 2: Ink-to-Tint -->
-                <div class="flip-card h-[320px] fade-in-up" style="perspective: 1000px;">
+                <div class="flip-card fade-in-up h-[320px]" style="perspective: 1000px;">
                     <div class="flip-card-inner relative w-full h-full transition-transform duration-700" style="transform-style: preserve-3d;">
                         <!-- Front -->
                         <div class="flip-card-front absolute w-full h-full rounded-xl shadow-xl overflow-hidden" style="backface-visibility: hidden;">
@@ -610,7 +610,7 @@ justify-center gap-4">
                 </div>
 
                 <!-- Flip Card 3: LLM Modeling -->
-                <div class="flip-card h-[320px] fade-in-up" style="perspective: 1000px;">
+                <div class="flip-card fade-in-up h-[320px]" style="perspective: 1000px;">
                     <div class="flip-card-inner relative w-full h-full transition-transform duration-700" style="transform-style: preserve-3d;">
                         <!-- Front -->
                         <div class="flip-card-front absolute w-full h-full rounded-xl shadow-xl overflow-hidden" style="backface-visibility: hidden;">
@@ -639,7 +639,7 @@ justify-center gap-4">
                 </div>
 
                 <!-- Flip Card 4: 3D Gaussian Splatting -->
-                <div class="flip-card h-[320px] fade-in-up" style="perspective: 1000px;">
+                <div class="flip-card fade-in-up h-[320px]" style="perspective: 1000px;">
                     <div class="flip-card-inner relative w-full h-full transition-transform duration-700" style="transform-style: preserve-3d;">
                         <!-- Front -->
                         <div class="flip-card-front absolute w-full h-full rounded-xl shadow-xl overflow-hidden" style="backface-visibility: hidden;">
@@ -671,7 +671,7 @@ justify-center gap-4">
                 </div>
 
                 <!-- Flip Card 5: Badminton Analysis -->
-                <div class="flip-card h-[320px] fade-in-up" style="perspective: 1000px;">
+                <div class="flip-card fade-in-up h-[320px]" style="perspective: 1000px;">
                     <div class="flip-card-inner relative w-full h-full transition-transform duration-700" style="transform-style: preserve-3d;">
                         <!-- Front -->
                         <div class="flip-card-front absolute w-full h-full rounded-xl shadow-xl overflow-hidden" style="backface-visibility: hidden;">
@@ -703,7 +703,7 @@ justify-center gap-4">
                 </div>
 
                 <!-- Flip Card 6: Polynomial Equation Solver -->
-                <div class="flip-card h-[320px] fade-in-up" style="perspective: 1000px;">
+                <div class="flip-card fade-in-up h-[320px]" style="perspective: 1000px;">
                     <div class="flip-card-inner relative w-full h-full transition-transform duration-700" style="transform-style: preserve-3d;">
                         <!-- Front -->
                         <div class="flip-card-front absolute w-full h-full rounded-xl shadow-xl overflow-hidden" style="backface-visibility: hidden;">
@@ -939,70 +939,27 @@ justify-center gap-4">
                     </svg>
                 </button>
                 
-        </div>
-        <!-- Text below image -->
-        <h3 class="text-xl font-bold text-gray-800 mb-2">
-            Pocket Comedian: BosonAI Hackathon Winner
-        </h3>
-        <p class="text-gray-600 mb-4">
-            Developed a real-time “pocket comedian” app using Audio LLMs, Flask, and Socket.IO for seamless speech-to-speech comedic interactions. It leverages the Higgs Audio Understanding Model, Qwen3, and Higgs Audio TTS for context-aware, expressive responses. Features include selectable comedian voices, multiple comedic modes, multi-turn conversation memory, and support for Mandarin and French input/output.
-        </p>
-        <!-- Icons row -->
-        <div class="flex space-x-4">
-            <a href="https://github.com/Zhu-K/boson-hackathon" target="_blank"
-                class="flex items-center justify-center w-10 h-10 rounded-full bg-gradient-to-r from-[#328bfd] to-[#49b1fd] text-white hover:from-[#49b1fd] hover:to-[#49b1fd] transition-all duration-300">
-                <!-- GitHub SVG -->
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor"
-                    viewBox="0 0 24 24">
-                    <path
-                        d="M12 .5C5.645.5.5 5.645.5 12c0 5.091 3.292 9.396 7.86 10.91.574.104.783-.25.783-.556 0-.275-.01-1.004-.015-1.97-3.199.694-3.873-1.541-3.873-1.541-.523-1.33-1.276-1.685-1.276-1.685-1.042-.713.079-.699.079-.699 1.152.081 1.756 1.183 1.756 1.183 1.026 1.755 2.691 1.248 3.345.954.104-.743.402-1.248.73-1.535-2.553-.29-5.238-1.278-5.238-5.694 0-1.258.449-2.286 1.185-3.09-.118-.29-.514-1.452.114-3.027 0 0 .968-.309 3.173 1.178.92-.255 1.91-.383 2.893-.388.982.005 1.973.133 2.894.388 2.204-1.487 3.171-1.178 3.171-1.178.63 1.575.233 2.737.114 3.027.738.804 1.185 1.832 1.185 3.09 0 4.43-2.69 5.4-5.255 5.683.41.353.776 1.048.776 2.114 0 1.526-.014 2.757-.014 3.132 0 .31.207.665.788.553C20.712 21.392 24 17.085 24 12c0-6.355-5.145-11.5-12-11.5z" />
-                </svg>
-            </a>
-        </div>
-    </div>
-</div>
+                <button class="swiper-button-next absolute top-1/2 -right-16 transform -translate-y-1/2 bg-white p-3 rounded-full shadow-xl hover:shadow-2xl cursor-pointer transition-all duration-300 hover:scale-110 z-20 border-2 border-gray-100">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-gray-800" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M9 5l7 7-7 7" />
+                    </svg>
+                </button>
 
-<!-- Project Card 1 -->
-<div class="bg-white rounded-lg p-4 fade-in-up">
-    <div class="flex flex-col items-center text-center">
-        <!-- Image on top -->
-        <div class="flex justify-center mb-4">
-            <img src="Images/project-1.jpg" alt="Project 1" class="w-72 rounded-xl" />
-        </div>
-        <!-- Text below image -->
-        <h3 class="text-xl font-bold text-gray-800 mb-2">
-            Ink-to-Tint: Manga Artisan
-        </h3>
-        <p class="text-gray-600 mb-4">
-            An automated system for manga colorization and style conversion to
-            enhance readability and ease artists' workload. Implements a
-            Pix2Pix conditional GAN in PyTorch with a CNN-based discriminator and U-Net
-            generator for colorizing black-and-white manga pages. Fine-tunes a pre-trained
-            Stable Diffusion model for manga style transfer across four distinct art styles.
-        </p>
-        <!-- Icons row -->
-        <div class="flex space-x-4">
-            <a href="https://github.com/Anannyap7/ink_to_tint-manga_artisan" target="_blank"
-                class="flex items-center justify-center w-10 h-10 rounded-full bg-gradient-to-r from-[#328bfd] to-[#49b1fd] text-white hover:from-[#49b1fd] hover:to-[#49b1fd] transition-all duration-300">
-                <!-- GitHub SVG -->
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor"
-                    viewBox="0 0 24 24">
-                    <path
-                        d="M12 .5C5.645.5.5 5.645.5 12c0 5.091 3.292 9.396 7.86 10.91.574.104.783-.25.783-.556 0-.275-.01-1.004-.015-1.97-3.199.694-3.873-1.541-3.873-1.541-.523-1.33-1.276-1.685-1.276-1.685-1.042-.713.079-.699.079-.699 1.152.081 1.756 1.183 1.756 1.183 1.026 1.755 2.691 1.248 3.345.954.104-.743.402-1.248.73-1.535-2.553-.29-5.238-1.278-5.238-5.694 0-1.258.449-2.286 1.185-3.09-.118-.29-.514-1.452.114-3.027 0 0 .968-.309 3.173 1.178.92-.255 1.91-.383 2.893-.388.982.005 1.973.133 2.894.388 2.204-1.487 3.171-1.178 3.171-1.178.63 1.575.233 2.737.114 3.027.738.804 1.185 1.832 1.185 3.09 0 4.43-2.69 5.4-5.255 5.683.41.353.776 1.048.776 2.114 0 1.526-.014 2.757-.014 3.132 0 .31.207.665.788.553C20.712 21.392 24 17.085 24 12c0-6.355-5.145-11.5-12-11.5z" />
-                </svg>
-            </a>
-            <a href="https://bit.ly/49QWqAI" target="_blank"
-                class="flex items-center justify-center w-10 h-10 rounded-full bg-gradient-to-r from-[#ff4e50] to-[#ff867a] text-white hover:from-[#ff867a] hover:to-[#ff867a] transition-all duration-300">
-                <!-- Document SVG -->
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor"
-                    viewBox="0 0 24 24">
-                    <path
-                        d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9l-7-7zM12 3.5L18.5 10H13a1 1 0 0 1-1-1V3.5zM6 4h5v3a3 3 0 0 0 3 3h3v10H6V4z" />
-                </svg>
-            </a>
+                <!-- Dots Indicator -->
+                <div id="carousel-indicators"
+                    class="absolute -bottom-12 left-1/2 transform -translate-x-1/2 flex space-x-3 z-10">
+                    <span class="w-3 h-3 bg-gray-400 rounded-full cursor-pointer transition-all duration-300 hover:bg-gray-500" data-index="0"></span>
+                    <span class="w-3 h-3 bg-gray-400 rounded-full cursor-pointer transition-all duration-300 hover:bg-gray-500" data-index="1"></span>
+                    <span class="w-3 h-3 bg-gray-400 rounded-full cursor-pointer transition-all duration-300 hover:bg-gray-500" data-index="2"></span>
+                    <span class="w-3 h-3 bg-gray-400 rounded-full cursor-pointer transition-all duration-300 hover:bg-gray-500" data-index="3"></span>
+                    <span class="w-3 h-3 bg-gray-400 rounded-full cursor-pointer transition-all duration-300 hover:bg-gray-500" data-index="4"></span>
+                    <span class="w-3 h-3 bg-gray-400 rounded-full cursor-pointer transition-all duration-300 hover:bg-gray-500" data-index="5"></span>
+                </div>
+            </div>
         </div>
     </div>
-</div>
+
+    <!-- Projects Section 2 (Stacked for small screens) -->
     <div id="projects2"
         class="flex md:hidden w-full flex-col items-center justify-center min-h-screen px-[5%] py-10 mb-10">
         <h2 class="text-center text-4xl font-extrabold text-gray-800 mb-6 relative">
@@ -1239,12 +1196,8 @@ justify-center gap-4">
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
                 <!-- Research Card 1 -->
-                <div class="research-card bg-white shadow-lg rounded-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up border-2 border-transparent hover:border-[#ff4e50] relative overflow-hidden">
-                    <div class="absolute top-0 right-0 w-24 h-24 bg-gradient-to-br from-[#ff4e50]/10 to-transparent rounded-bl-full"></div>
-                    <div class="inline-block px-3 py-1 bg-gradient-to-r from-[#ff4e50] to-[#ff867a] text-white text-xs font-bold rounded-full mb-3">
-                        📝 Conference Paper
-                    </div>
-                    <h3 class="text-xl font-bold text-gray-800 mb-3 relative z-10">
+                <div class="research-card bg-white shadow-lg rounded-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up border-2 border-transparent hover:border-[#ff4e50]">
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">
                         Histology Classification for Early Gastric Cancer using AI Model
                     </h3>
                     <p class="text-gray-600 mb-2">
@@ -1267,12 +1220,8 @@ justify-center gap-4">
                 </div>
 
                 <!-- Research Card 2 -->
-                <div class="research-card bg-white shadow-lg rounded-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up border-2 border-transparent hover:border-[#328bfd] relative overflow-hidden">
-                    <div class="absolute top-0 right-0 w-24 h-24 bg-gradient-to-br from-[#328bfd]/10 to-transparent rounded-bl-full"></div>
-                    <div class="inline-block px-3 py-1 bg-gradient-to-r from-[#328bfd] to-[#49b1fd] text-white text-xs font-bold rounded-full mb-3">
-                        📝 Conference Paper
-                    </div>
-                    <h3 class="text-xl font-bold text-gray-800 mb-3 relative z-10">
+                <div class="research-card bg-white shadow-lg rounded-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up border-2 border-transparent hover:border-[#328bfd]">
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">
                         Movie Poster Genre Classification using Federated Learning
                     </h3>
                     <p class="text-gray-600 mb-2">
@@ -1299,12 +1248,8 @@ justify-center gap-4">
                 </div>
 
                 <!-- Research Card 3 (Newly Added) -->
-                <div class="research-card bg-white shadow-lg rounded-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up border-2 border-transparent hover:border-[#ff4e50] relative overflow-hidden">
-                    <div class="absolute top-0 right-0 w-24 h-24 bg-gradient-to-br from-[#ff4e50]/10 to-transparent rounded-bl-full"></div>
-                    <div class="inline-block px-3 py-1 bg-gradient-to-r from-[#ff4e50] to-[#ff867a] text-white text-xs font-bold rounded-full mb-3">
-                        📚 Journal Article
-                    </div>
-                    <h3 class="text-xl font-bold text-gray-800 mb-3 relative z-10">
+                <div class="research-card bg-white shadow-lg rounded-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up border-2 border-transparent hover:border-[#ff4e50]">
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">
                         An optimized handwritten polynomial equations solver using an enhanced inception V4 model
                     </h3>
                     <p class="text-gray-600 mb-2">
@@ -1333,12 +1278,8 @@ justify-center gap-4">
                 </div>
 
                 <!-- Research Card 4 -->
-                <div class="research-card bg-white shadow-lg rounded-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up border-2 border-transparent hover:border-[#328bfd] relative overflow-hidden">
-                    <div class="absolute top-0 right-0 w-24 h-24 bg-gradient-to-br from-[#328bfd]/10 to-transparent rounded-bl-full"></div>
-                    <div class="inline-block px-3 py-1 bg-gradient-to-r from-[#328bfd] to-[#49b1fd] text-white text-xs font-bold rounded-full mb-3">
-                        📝 Conference Paper
-                    </div>
-                    <h3 class="text-xl font-bold text-gray-800 mb-3 relative z-10">
+                <div class="research-card bg-white shadow-lg rounded-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up border-2 border-transparent hover:border-[#328bfd]">
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">
                         A Federated Approach to Converting Photos to Sketch
                     </h3>
                     <p class="text-gray-600 mb-2">
@@ -1366,12 +1307,8 @@ justify-center gap-4">
                 </div>
 
                 <!-- Research Card 5 (Formerly Card 4; centered in the last row) -->
-                <div class="research-card bg-white shadow-lg rounded-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up md:col-span-2 md:mx-auto md:max-w-xl border-2 border-transparent hover:border-[#ff4e50] relative overflow-hidden">
-                    <div class="absolute top-0 right-0 w-24 h-24 bg-gradient-to-br from-[#ff4e50]/10 to-transparent rounded-bl-full"></div>
-                    <div class="inline-block px-3 py-1 bg-gradient-to-r from-[#ff4e50] to-[#ff867a] text-white text-xs font-bold rounded-full mb-3">
-                        📝 Conference Paper
-                    </div>
-                    <h3 class="text-xl font-bold text-gray-800 mb-3 relative z-10">
+                <div class="research-card bg-white shadow-lg rounded-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition-all duration-300 fade-in-up md:col-span-2 md:mx-auto md:max-w-xl border-2 border-transparent hover:border-[#ff4e50]">
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">
                         Music Genre Classification using Federated Learning
                     </h3>
                     <p class="text-gray-600 mb-2">
