--- a/index.html
+++ b/index.html
@@ -563,7 +563,6 @@ justify-center gap-4">
                         </div>
                         <!-- Back -->
                         <div class="flip-card-back absolute w-full h-full rounded-xl shadow-xl bg-white p-5 overflow-y-auto" style="backface-visibility: hidden; transform: rotateY(180deg);">
-                            <h3 class="text-lg font-bold text-gray-800 mb-2">Pocket Comedian</h3>
                             <p class="text-gray-700 text-sm leading-relaxed mb-3">Developed a real-time "pocket comedian" app using Audio LLMs, Flask, and Socket.IO for seamless speech-to-speech comedic interactions. Features include selectable comedian voices, multiple comedic modes, and support for Mandarin and French.</p>
                             <div class="flex space-x-3 mb-4">
                                 <a href="https://github.com/Zhu-K/boson-hackathon" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full bg-gradient-to-r from-[#328bfd] to-[#49b1fd] text-white hover:scale-110 transition-all">
@@ -592,7 +591,6 @@ justify-center gap-4">
                         </div>
                         <!-- Back -->
                         <div class="flip-card-back absolute w-full h-full rounded-xl shadow-xl bg-white p-5 overflow-y-auto" style="backface-visibility: hidden; transform: rotateY(180deg);">
-                            <h3 class="text-lg font-bold text-gray-800 mb-2">Ink-to-Tint: Manga Artisan</h3>
                             <p class="text-gray-700 text-sm leading-relaxed mb-3">An automated system for manga colorization and style conversion. Implements a Pix2Pix conditional GAN in PyTorch with a CNN-based discriminator and U-Net generator for colorizing black-and-white manga pages.</p>
                             <div class="flex space-x-3 mb-4">
                                 <a href="https://github.com/Anannyap7/ink_to_tint-manga_artisan" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full bg-gradient-to-r from-[#328bfd] to-[#49b1fd] text-white hover:scale-110 transition-all">
@@ -616,7 +614,7 @@ justify-center gap-4">
                         <div class="flip-card-front absolute w-full h-full rounded-xl shadow-xl overflow-hidden" style="backface-visibility: hidden;">
                             <img src="Images/pikachu_pic.jpg" alt="LLM Modeling" class="w-full h-full object-cover">
                             <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/95 via-black/60 to-transparent p-5 pt-16">
-                                <h3 class="text-white font-bold text-base mb-3" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">Optimized LLM Modeling</h3>
+                                <h3 class="text-white font-bold text-base mb-3" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">Optimized LLM Modeling: Classification and Instruction Fine-Tuning</h3>
                                 <button onclick="flipCard(this)" class="bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gradient-to-r hover:from-[#ff4e50] hover:to-[#ff867a] hover:text-white transition-all duration-300 shadow-lg">
                                     View Details →
                                 </button>
@@ -624,7 +622,6 @@ justify-center gap-4">
                         </div>
                         <!-- Back -->
                         <div class="flip-card-back absolute w-full h-full rounded-xl shadow-xl bg-white p-5 overflow-y-auto" style="backface-visibility: hidden; transform: rotateY(180deg);">
-                            <h3 class="text-lg font-bold text-gray-800 mb-2">Optimized LLM Modeling</h3>
                             <p class="text-gray-700 text-sm leading-relaxed mb-3">Integrated attention mechanism with KV cache optimizations. Deployed models on AWS Sagemaker through Docker containers. Built a RAG Agent for Pokemon Battle Analysis using LangChain.</p>
                             <div class="flex space-x-3 mb-4">
                                 <a href="https://github.com/Anannyap7/LLM-From-Scratch" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full bg-gradient-to-r from-[#328bfd] to-[#49b1fd] text-white hover:scale-110 transition-all">
@@ -645,7 +642,7 @@ justify-center gap-4">
                         <div class="flip-card-front absolute w-full h-full rounded-xl shadow-xl overflow-hidden" style="backface-visibility: hidden;">
                             <img src="Images/project-2.png" alt="3D Gaussian Splatting" class="w-full h-full object-cover">
                             <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/95 via-black/60 to-transparent p-5 pt-16">
-                                <h3 class="text-white font-bold text-base mb-3" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">3D Gaussian Splatting</h3>
+                                <h3 class="text-white font-bold text-base mb-3" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">Text-based 3D Gaussian Splatting Object Segmentation</h3>
                                 <button onclick="flipCard(this)" class="bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gradient-to-r hover:from-[#ff4e50] hover:to-[#ff867a] hover:text-white transition-all duration-300 shadow-lg">
                                     View Details →
                                 </button>
@@ -653,7 +650,6 @@ justify-center gap-4">
                         </div>
                         <!-- Back -->
                         <div class="flip-card-back absolute w-full h-full rounded-xl shadow-xl bg-white p-5 overflow-y-auto" style="backface-visibility: hidden; transform: rotateY(180deg);">
-                            <h3 class="text-lg font-bold text-gray-800 mb-2">3D Gaussian Splatting</h3>
                             <p class="text-gray-700 text-sm leading-relaxed mb-3">A Python-based 3D Gaussian Splatting segmentation model leveraging LangSAM for text-driven 3D segmentation. Incorporates optimized prompt initialization using K-means clustering.</p>
                             <div class="flex space-x-3 mb-4">
                                 <a href="https://github.com/Zhu-K/text-prompted-3dgs-segmentation" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full bg-gradient-to-r from-[#328bfd] to-[#49b1fd] text-white hover:scale-110 transition-all">
@@ -677,7 +673,7 @@ justify-center gap-4">
                         <div class="flip-card-front absolute w-full h-full rounded-xl shadow-xl overflow-hidden" style="backface-visibility: hidden;">
                             <img src="Images/project-3.png" alt="Badminton Analysis" class="w-full h-full object-cover">
                             <div class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/95 via-black/60 to-transparent p-5 pt-16">
-                                <h3 class="text-white font-bold text-base mb-3" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">Badminton Player Analysis</h3>
+                                <h3 class="text-white font-bold text-base mb-3" style="text-shadow: 2px 2px 4px rgba(0,0,0,0.8);">Qualitative Badminton Player Analysis</h3>
                                 <button onclick="flipCard(this)" class="bg-white text-gray-800 px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gradient-to-r hover:from-[#ff4e50] hover:to-[#ff867a] hover:text-white transition-all duration-300 shadow-lg">
                                     View Details →
                                 </button>
@@ -685,7 +681,6 @@ justify-center gap-4">
                         </div>
                         <!-- Back -->
                         <div class="flip-card-back absolute w-full h-full rounded-xl shadow-xl bg-white p-5 overflow-y-auto" style="backface-visibility: hidden; transform: rotateY(180deg);">
-                            <h3 class="text-lg font-bold text-gray-800 mb-2">Badminton Analysis</h3>
                             <p class="text-gray-700 text-sm leading-relaxed mb-3">A computer vision system for tracking player movements and classifying badminton strokes in broadcast videos. Utilizes Particle Filter with 99% accuracy and CNNs for stroke prediction with 81% accuracy.</p>
                             <div class="flex space-x-3 mb-4">
                                 <a href="https://github.com/Anannyap7/Qualitative-Badminton-Player-Analysis" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full bg-gradient-to-r from-[#328bfd] to-[#49b1fd] text-white hover:scale-110 transition-all">
@@ -717,7 +712,6 @@ justify-center gap-4">
                         </div>
                         <!-- Back -->
                         <div class="flip-card-back absolute w-full h-full rounded-xl shadow-xl bg-white p-5 overflow-y-auto" style="backface-visibility: hidden; transform: rotateY(180deg);">
-                            <h3 class="text-lg font-bold text-gray-800 mb-2">Polynomial Equation Solver</h3>
                             <p class="text-gray-700 text-sm leading-relaxed mb-3">A Flask-based web application for solving image-based handwritten polynomial equations. Implements a CNN model using TensorFlow-Keras and OpenCV with 98% accuracy.</p>
                             <div class="flex space-x-3 mb-4">
                                 <a href="https://github.com/Anannyap7/Handwritten-Polynomial-Equation-Solver" target="_blank" class="flex items-center justify-center w-10 h-10 rounded-full bg-gradient-to-r from-[#328bfd] to-[#49b1fd] text-white hover:scale-110 transition-all">
@@ -990,7 +984,7 @@ justify-center gap-4">
                     </p>
                     <a href="https://www.sages.org/" target="_blank"
                         class="inline-flex items-center px-4 py-2 bg-gradient-to-r from-[#ff4e50] to-[#ff867a] text-white rounded-full text-sm font-semibold hover:-translate-y-1 transition-transform duration-300">
-                        To Be Published
+                        Presented at SAGES Conference
                     </a>
                 </div>
 
